Fixed z-index of div so it doesn't overlap actual content

--- a/scss/tech.scss
+++ b/scss/tech.scss
@@ -14,6 +14,7 @@
   position: absolute;    
   top: - $offset;
   transition: left 0.4s ease, top 0.4s ease;
+  z-index: -1;
 }
 
 .content {
